@@ -95,6 +95,7 @@ because of Phabricator reports.
   Construct WANObjectCache directly instead, or use MediaWikiServices.
 * ApiQueryUserInfo::getBlockInfo, deprecated in 1.34, was removed. Use
   ApiBlockInfoTrait::getBlockDetails instead.
+* The mediawiki.ui.text module, deprecated in 1.28 and unused, was removed.
 * …
 
 === Deprecations in 1.35 ===
